--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-    padding: 20px 100px 0px 100px;
-    background: #f3f3f3;
+    /*padding: 20px 100px 0px 100px;*/
+    padding: 0;
+    margin:0;
+    background-color: #003300;
     text-align:center;
 }
+
 #page{
     display:flex;
     justify-content: center;
+    background-color: #003300;
+    
 }
 button {
     font-family: 'Montserrat', sans-serif;
@@ -28,14 +33,60 @@ polygon{
 
 
 #catPic{
-    max-width: 200px;
+    max-width: 600px;
+    max-height: 400px;
     
 }
 
 #app{
-    background-color: grey;
+    background-color: rgb(0, 0, 255, .6);
     padding: 30px;
     width:80%;
     border-radius: 20px;
+    
+}
+
+/*.footer {*/
+/*    display:flex;*/
+/*    align-items:center;*/
+/*    justify-content:center;*/
+/*    position: fixed;*/
+/*    bottom: 0;*/
+/*    width: 100%;*/
+/*    height: 40px;*/
+/*    background-color: #b36b00;*/
+/*    color: #003300;*/
+/*}*/
+.footer {
+  display:flex;
+  flex-direction: row;
+  position: relative;
+  right: 0;
+  bottom:0;
+  left: 0;
+  height: 40px;
+  width:100%;
+  margin-top: 10px;
+  padding:15px;
+  background-color: #b36b00;
+  align-self:flex-end;
+  align-items: center;
+  justify-content: space-around;
+  clear:both;
+  color: #003300;
+}
+.header{
+    text-align: center;
+    background-color: #b36b00;
+    margin-bottom:10px;
+    position:relative;
+    margin-top:0;
+    padding: 15px;
+    top:0;
+    font-family: sans-serif;
+    color: #003300;
+    width:100%;
+    font-family: serif;
+    font-size: 55px;
     
 }
