--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ polygon{
 }
 
 #app{
-    background-color: rgb(0, 0, 255, .6);
+    background-color: rgba(0, 0, 255, 0.4);
     padding: 30px;
     width:80%;
     border-radius: 20px;
