final style fix

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ polygon{
   align-items: center;
   justify-content: space-around;
   clear:both;
-  color: #003300;
+  color: white;
 }
 .header{
     text-align: center;
